Removed word break on sidebar, fixing issue on Firefox.

--- a/themes/bootstrap3/static/css/style.css
+++ b/themes/bootstrap3/static/css/style.css
@@ -110,13 +110,6 @@ body {
 
 #sidebar {
     padding-top: 0px;
-    -ms-word-break: break-all;
-    word-break: break-all;
-    word-break: break-word;
-    -webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
-    hyphens: auto;
 }
 
 #sidebar a {
